# chess-game-with-mcts

./: .dockerignore  Dockerfile  MULTIPLAYER_FIXES.md  README-Docker.md  README.md  UI_UX_ENHANCEMENTS.md  chess_games.db  create_test_invitation.py  debug_multiplayer.js  debug_real_multiplayer.py  debug_websocket.py  deploy.sh  dev.sh  docker-compose.dev.yml  docker-compose.yml  main.py  main_clean.py  main_monolithic_backup.py  mcts_backend_old.py  nginx.conf  ngrok-setup.sh  package.json  pyproject.toml  requirements.txt  responsive_test.html  run.sh  setup-ngrok.sh  start.sh  test.sh  test_basic_multiplayer.py  test_board.py  test_board_sync.py  test_chess_simple.py  test_complete_browser_sim.py  test_complete_multiplayer.py  test_connection_handshake.py  test_frontend_integration.py  test_full_multiplayer.py  test_game_turns.py  test_host_resolution.py  (+10 more)
api/: models.py  websocket_handlers.py
data/: rl_data.py
engines/: mcts.py  rl_mcts.py
models/: chess_board_broken.py  evaluator.py
multiplayer/: features.py
session/: game_session.py
static/: manifest.json  style.css  test_multiplayer.html
static/css/: style.css
static/js/: main.js
template/: index.html
