[project]
name = "mcts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==23.2.1",
    "fastapi==0.104.1",
    "jinja2==3.1.2",
    "python-multipart==0.0.6",
    "requests>=2.32.4",
    "uvicorn[standard]==0.24.0",
]
